examples/test/testpolicy5553.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5553
  namespace: namespace456
spec:
  podSelector:
    matchLabels:
      key44: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value14
          key1: value7
          key21: value28
      podSelector:
        matchLabels:
          key32: value5
          key30: value34
          key16: value48
